# codex-pal

./: Cargo.toml  INSTALL.md  INSTALL.zh.md  LICENSE  PYTHON_API.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: CI.yml  release.yml
python/codex_pal/: __init__.py  agent.py  py.typed
src/: cli.rs  codex.rs  config.rs  main.rs  provider.rs  relay.rs  toml_value.rs
tests/: cli_behavior.rs  test_python_api.py
