[package]
name = "codex-pal"
version = "0.2.1"
edition = "2024"
description = "Run Codex CLI with OpenAI-compatible providers and orchestrate profile-based agents from Python"
license = "MIT"
repository = "https://github.com/MetaFARS/codex-pal"
homepage = "https://github.com/MetaFARS/codex-pal"
readme = "README.md"
keywords = ["codex", "cli", "relay", "openai", "llm"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "codex-pal"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
codex-relay = { version = "0.5.5", optional = true }
dirs = "6.0"
fs2 = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
which = "8.0"

[dev-dependencies]
tempfile = "3.14"
