[build-system]
requires = ["maturin>=1.14,<2.0"]
build-backend = "maturin"

[project]
name = "codex-pal"
description = "Run Codex CLI with OpenAI-compatible providers and orchestrate profile-based agents from Python"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "MetaFARS" },
]
keywords = ["codex", "codex-relay", "openai-compatible", "llm", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "codex-relay>=0.5.4,<0.6",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/MetaFARS/codex-pal"
Repository = "https://github.com/MetaFARS/codex-pal"
Issues = "https://github.com/MetaFARS/codex-pal/issues"

[tool.maturin]
bindings = "bin"
python-source = "python"
module-name = "codex_pal"
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "**/*.pyo"
]
